<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".QuizActivity">

    <TextView
            android:id="@+id/scores"
            android:text="@string/zero_score"
            android:textSize="20sp"
            android:textColor="@color/three"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/questions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintHorizontal_bias="0.913"
            app:layout_constraintVertical_bias="0.545"/>
    <TextView
            android:id="@+id/questions"
            android:text="@string/question_1"
            android:textSize="40sp"
            android:textColor="@color/two"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/toggleButton"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    <ToggleButton
            android:id="@+id/toggleButton"
            android:textOn="@string/answer_true"
            android:textOff="@string/answer_false"
            android:textSize="48sp"
            android:textColor="@color/one"
            android:layout_width="300dp"
            android:layout_height="100dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/questions"
            app:layout_constraintBottom_toTopOf="@+id/submitButton"
            app:layout_constraintVertical_bias="0.986"
            app:layout_constraintHorizontal_bias="0.454"/>

    <Button
            android:id="@+id/submitButton"
            android:text="@string/submit"
            android:textColor="@color/three"
            android:layout_width="@dimen/button_width"
            android:layout_height="@dimen/button_height"
            android:textSize="48sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggleButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.519"
            app:layout_constraintHorizontal_bias="0.454"/>
    <ImageView
            android:id="@+id/hogwartsCrestBackground"
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/hogwarts_emblem"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintHorizontal_bias="0.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>